SERVER-70985 Fix uuid naming issue in onModifyShardedCollectionGlobalIndexCatalogEntry